# dotfile_bolilerplate

./: .editorconfig  .prettierrc  Cargo.toml  README.md  index.html  main.css  package.json  postcss.config.js  tailwind.config.js
