[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"

description = "It's a template of Cargo configuration"
keywords = ["template"]
license = "MIT/Apache-2.0"

readme = "README.md"
repository = "https://github.com/chho/dotfile_bolilerplate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]